validation add in project schema
